--- a/firstblog.html
+++ b/firstblog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample_blog</title>
-    <link rel="stylesheet" href="try.css">
+    <link rel="stylesheet" href="firstblog.css">
 </head>
 
 <body>
