made my website responsive

--- a/firstblog.html
+++ b/firstblog.html
@@ -22,13 +22,14 @@
     <br />
     <main>
         <article>
-            <h1>Sticky Footer with Flexbox</h1>
+            <h1>A responsive website with photocards</h1>
+            <br/>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat..</p>
+                ex ea commodo consequat...</p>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                laborum.</p>
+                laborum..</p>
         </article>
 
         <div class="wrap">
@@ -36,7 +37,7 @@
                 <img src="Assets/images/im3.jpg" alt="Haircut"
                     style="width: 100%">
                 <div class="container">
-                    <h3>Middle-Fade </h3>
+                    <h3><b>Middle-Fade </b></h3>
                     <p class="readmore"><a href="#"><span class="readmore">Read More></span></a></p>
 
                 </div>
